# backend/openapi.json
@@ -4336,6 +4336,11 @@
           "light": {
             "title": "Light",
             "type": "string"
+          },
+          "opinion": {
+            "default": "",
+            "title": "Opinion",
+            "type": "string"
           }
         },
         "required": [
